@@ -34,6 +34,7 @@ FROM_INT (class=NULL, gint value)
         RETVAL
 
 =for apidoc
+=for arg units (integer) High precision units
 Converts a device independent unit into an integer value, like pixels.
 =cut
 gint
@@ -55,6 +56,7 @@ FROM_FLOAT (class=NULL, gdouble value)
         RETVAL
 
 =for apidoc
+=for arg units (integer) High precision units
 Converts a device independent unit into a floating point value, like a
 percentage
 =cut
@@ -65,6 +67,9 @@ TO_FLOAT (class=NULL, gint32 units)
     OUTPUT:
         RETVAL
 
+=for apidoc
+Converts pixels into device independent units
+=cut
 gint32
 FROM_DEVICE (class=NULL, gint value)
     CODE:
@@ -72,11 +77,18 @@ FROM_DEVICE (class=NULL, gint value)
     OUTPUT:
         RETVAL
 
+=for apidoc
+=for arg units (integer) High precision units
+Converts device independent units into pixels
+=cut
 gint
 TO_DEVICE (class=NULL, gint32 units)
     CODE:
         RETVAL = CLUTTER_UNITS_TO_DEVICE (units);
 
+=for apidoc
+Converts Pango units into device independent units
+=cut
 gint32
 FROM_PANGO_UNIT (class=NULL, gint value)
     CODE:
@@ -84,6 +96,9 @@ FROM_PANGO_UNIT (class=NULL, gint value)
     OUTPUT:
         RETVAL
 
+=for apidoc
+Converts device independent units into Pango units
+=cut
 gint
 TO_PANGO_UNIT (class=NULL, gint32 units)
     CODE:
@@ -91,6 +106,10 @@ TO_PANGO_UNIT (class=NULL, gint32 units)
     OUTPUT:
         RETVAL
 
+=for apidoc
+Converts a percentage of the default stage's width into
+device independed units
+=cut
 gint32
 FROM_STAGE_WIDTH_PERCENTAGE (class=NULL, gint percent)
     CODE:
@@ -98,6 +117,10 @@ FROM_STAGE_WIDTH_PERCENTAGE (class=NULL, gint percent)
     OUTPUT:
         RETVAL
 
+=for apidoc
+Converts a percentage of the default stage's height into
+device independed units
+=cut
 gint32
 FROM_STAGE_HEIGHT_PERCENTAGE (class=NULL, gint percent)
     CODE:
@@ -105,6 +128,10 @@ FROM_STAGE_HEIGHT_PERCENTAGE (class=NULL, gint percent)
     OUTPUT:
         RETVAL
 
+=for apidoc
+Converts a percentage of an actor's parent widget width into
+device independed units
+=cut
 gint32
 FROM_PARENT_WIDTH_PERCENTAGE (class=NULL, ClutterActor *actor, gint percent)
     CODE:
@@ -112,6 +139,10 @@ FROM_PARENT_WIDTH_PERCENTAGE (class=NULL, ClutterActor *actor, gint percent)
     OUTPUT:
         RETVAL
 
+=for apidoc
+Converts a percentage of an actor's parent widget height into
+device independed units
+=cut
 gint32
 FROM_PARENT_HEIGHT_PERCENTAGE (class=NULL, ClutterActor *actor, gint percent)
     CODE:
@@ -119,6 +150,9 @@ FROM_PARENT_HEIGHT_PERCENTAGE (class=NULL, ClutterActor *actor, gint percent)
     OUTPUT:
         RETVAL
 
+=for apidoc
+Converts millimeters into device independent units
+=cut
 gint32
 FROM_MM (class=NULL, gint millimeters)
     CODE:
@@ -126,6 +160,9 @@ FROM_MM (class=NULL, gint millimeters)
     OUTPUT:
         RETVAL
 
+=for apidoc
+Converts font points into device independent units
+=cut
 gint32
 FROM_POINTS (class=NULL, gint points)
     CODE:
