@@ -1,5 +1,15 @@
 2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* xs/ClutterActor.xs:
+	* xs/ClutterAlpha.xs:
+	* xs/ClutterBehaviour.xs:
+	* xs/ClutterUnits.xs: Even more documentation.
+
+	* examples/behaviour.pl: Use a custom alpha function, and exercise
+	the Clutter::Timeline->get_progress() API at the same time.
+
+2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* xs/ClutterActor.xs: Port some of the C API documentation
 	and description to the Perl bindings.
 
